--- a/static/welcome.html
+++ b/static/welcome.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my app</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to my static file</h1>
-</body>
+
+    <a href="/">Home</a>
+    <a href="/users">Users</a>
+    <a href="/location">Location</a>
+  </body>
 </html>
