got access token correctly for github display github username

--- a/static/welcome.html
+++ b/static/welcome.html
@@ -15,6 +15,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" />
         <button type="submit" value="login">Submit</button>
+        <a class="btn" href="/auth">Sign in with github</a>
     </form>
 
    
